--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+/* Website */
 body
 {
   padding: 0;
@@ -9,7 +10,12 @@ body
   overflow-anchor: none;
   background:
     url("/tea-brewing.png") no-repeat fixed bottom left / cover;
-  background-color: #98be4b;
+  background-color: var(--light-green-color);
+
+  --light-green-color: #98BE4B;
+  --medium-green-color: #6E8D39;
+  --dark-green-color : #6C863E;
+  --scroll-green-color: #3D5316;
 }
 
 body::-webkit-scrollbar
@@ -19,12 +25,18 @@ body::-webkit-scrollbar
 
 body::-webkit-scrollbar-track
 {
-  background: #9dca41;
+  background: var(--light-green-color);
 }
 
 body::-webkit-scrollbar-thumb
 {
-  background: rgb(61, 83, 22);
+  background: var(--scroll-green-color);
+}
+
+::selection
+{
+  background-color: var(--dark-green-color);
+  color: #cfe79d;
 }
 
 .page
@@ -32,9 +44,11 @@ body::-webkit-scrollbar-thumb
   height: 100vh;
 }
 
+
+/* Title */
 #title
 {
-  background-color: rgb(108, 134, 62);
+  background-color: var(--dark-green-color);
   height: 55px;
   width: 960px;
   max-width: 90vw;
@@ -50,7 +64,6 @@ body::-webkit-scrollbar-thumb
   width: 90vw;
   margin: -13px 0 0 39px;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 #title h4
@@ -58,6 +71,8 @@ body::-webkit-scrollbar-thumb
   display: none;
 }
 
+
+/* Social icons */
 #social-icons
 {
   display: flex;
@@ -67,9 +82,13 @@ body::-webkit-scrollbar-thumb
 
 #social-icons .icon
 {
-  width: 60px;
+  box-sizing: border-box;
+  width: 50px;
   margin: 0 10px -35px 10px;
   filter: invert(15%) brightness(2.3) sepia(0.8) hue-rotate(-310deg) saturate(2);
+  border: 2px solid black;
+  padding: 4px;
+  border-radius: 8px;
 }
 
 #social-icons ul
@@ -77,7 +96,7 @@ body::-webkit-scrollbar-thumb
   list-style: none;
   background-color: rgba(108, 134, 62, 0.4);
   border-radius: 0 0 0 13px;
-  padding: 10px 15px 44px 18px;
+  padding: 10px 13px 16px 16px;
   margin: -16px;
 }
 
@@ -90,56 +109,58 @@ body::-webkit-scrollbar-thumb
 #social-icons ul li a::before,
 #social-icons ul li a::after
 {
-  transition: all .35s;
+  height: 50px;
+  transition: all .3s;
 }
 
 #social-icons ul li a:hover
 {
-  filter: brightness(1.6) drop-shadow(0 0 0.4rem black);
+  filter: brightness(1.6) drop-shadow(0 0 0.18rem black);
 }
 
 
+/* Buttons */
 .buttons
 {
-  width: 100vw;
   position: relative;
+  width: 100vw;
   text-align: center;
-  top: 40vh;
-  align-self: center;
-  margin: auto;
+  top: 45%;
+  transform: translate(0%, -75%);
 }
 
-#black-tea { background: linear-gradient(to bottom, rgb(110, 141, 57) 92%, rgb(33, 34, 34) 0) top/100% no-repeat; }
-#green-tea { background: linear-gradient(to bottom, rgb(110, 141, 57) 92%, rgb(42, 197, 42) 0) top/100% no-repeat; }
-#oolong-tea { background: linear-gradient(to bottom, rgb(110, 141, 57) 92%, rgb(53, 207, 192) 0) top/100% no-repeat; }
-#white-tea { background: linear-gradient(to bottom, rgb(110, 141, 57) 92%, rgb(221, 236, 241) 0) top/100% no-repeat; }
-#pu-erh-tea { background: linear-gradient(to bottom, rgb(110, 141, 57) 92%, rgb(182, 57, 57) 0) top/100% no-repeat; }
-#yellow-tea { background: linear-gradient(to bottom, rgb(110, 141, 57) 92%, rgb(224, 224, 42) 0) top/100% no-repeat; }
+#black-tea { background: linear-gradient(to bottom, var(--medium-green-color) 92%, rgb(33, 34, 34) 0) top/100% no-repeat; }
+#green-tea { background: linear-gradient(to bottom, var(--medium-green-color) 92%, rgb(42, 197, 42) 0) top/100% no-repeat; }
+#oolong-tea { background: linear-gradient(to bottom, var(--medium-green-color) 92%, rgb(53, 207, 192) 0) top/100% no-repeat; }
+#white-tea { background: linear-gradient(to bottom, var(--medium-green-color) 92%, rgb(221, 236, 241) 0) top/100% no-repeat; }
+#pu-erh-tea { background: linear-gradient(to bottom, var(--medium-green-color) 92%, rgb(182, 57, 57) 0) top/100% no-repeat; }
+#yellow-tea { background: linear-gradient(to bottom, var(--medium-green-color) 92%, rgb(224, 224, 42) 0) top/100% no-repeat; }
 
 .buttons button
 {
-  background-color: rgb(110, 141, 57);
+  background-color: var(--medium-green-color);
   font: 30px "Poppins", sans-serif;
   font-weight: 700;
   padding: 20px 40px;
   margin: 9px 6px;
   border-radius: 6px;
   border: 2px solid black;
-  cursor: pointer;
   box-shadow: 4px 5px rgb(61, 77, 36);
+  cursor: pointer;
 }
 
 .buttons button:hover
 {
-  padding: 20px 52px 27px 52px;
-  border-width: 2px 4px 5px 3px;
+  box-shadow: 3px 4px black, -3px -4px black;
+  padding: 20px 45px 20px 45px;
+  border-width: 2px 4px;
 }
 
 .buttons button,
 .buttons button:before,
 .buttons button:after
 {
-  transition: padding .2s, border .15s;
+  transition: padding .2s, box-shadow .15s, border .15s;
 }
 
 .buttons button:focus
@@ -147,9 +168,20 @@ body::-webkit-scrollbar-thumb
   outline: 0;
 }
 
+
+/* Tea information */
+#choose-again
+{
+  margin-top: 150px;
+  margin-bottom: -115px;
+  width: 100%;
+  height: 620px;
+}
+
 .buttons img
 {
-  margin-top: -310px;
+  box-sizing: border-box;
+  padding-top: 40px;
   max-width: 100%;
 }
 
@@ -157,13 +189,14 @@ body::-webkit-scrollbar-thumb
 {
   font: 28px "Poppins", sans-serif;
   font-weight: 700;
-  margin: -70px 0 38px 0;
 }
 
+
+/* Footer */
 #footer
 {
   position: sticky;
-  background-color: rgb(108, 134, 62);
+  background-color: var(--dark-green-color);
   height: 40px;
   width: 320px;
   max-width: 100vw;
@@ -188,24 +221,27 @@ body::-webkit-scrollbar-thumb
 }
 
 
-@media (max-width: 1049px)
+/* Media dependencies */
+@media (max-width: 1149px)
 {
   #title
   {
     height: 41px;
     width: 737px;
-    max-width: 93vw;
-    margin-left: -29px;
-    border-radius: 0 0 10px 0;
   }
 
   #title h1
   {
     font-size: 48px;
   }
+
+  #social-icons
+  {
+    margin-top: -12px;
+  }
 }
 
-@media (max-width: 799px)
+@media (max-width: 919px)
 {
   #title
   {
@@ -233,31 +269,48 @@ body::-webkit-scrollbar-thumb
 
   #title h1::-webkit-scrollbar-track
   {
-    background: rgb(108, 134, 62);
+    background: var(--dark-green-color);
   }
 
   #title h1::-webkit-scrollbar-thumb
   {
-    background: rgb(61, 83, 22);
+    background: var(--scroll-green-color);
     border-radius: 14px;
+  }
+
+  #social-icons
+  {
+    margin-top: 10px;
+    margin-bottom: 15px;
+  }
+
+  #social-icons .icon
+  {
+    margin-top: 5px;
   }
 
   .buttons
   {
     top: 20px;
-    margin-bottom: 70px;
+    margin-bottom: 100px;
+    transform: translate(0%, 0%);
+  }
+
+  #choose-again
+  {
+    margin-bottom: -100px;
   }
 
   .buttons img
   {
-    margin-top: -35px;
-    margin-bottom: 40px;
+    margin-top: -120px;
     max-width: 60vw;
   }
 
   #footer
   {
     top: calc(100vh - 23px);
+    height: 23px;
   }
 }
 
