--- a/styles/title.css
+++ b/styles/title.css
@@ -1,5 +1,5 @@
 /* Title Styling */
-#title
+header
 {
   background-color: var(--dark-green-color);
   height: 55px; width: 955px;
@@ -8,7 +8,7 @@
   border-radius: 0 0 10px 0;
 }
 
-#title h1
+header h1
 {
   font: 64px "Poppins", sans-serif;
   font-weight: 700;
@@ -18,4 +18,4 @@
   white-space: nowrap;
 }
 
-#title h4 { display: none; }
+header h4 { display: none; }
