--- a/styles/index.css
+++ b/styles/index.css
@@ -39,10 +39,10 @@ body
 /* Media Queries */
 @media (max-width: 1149px)
 {
-  #title
+  header
   { height: 41px; width: 733px; }
 
-  #title h1
+  header h1
   { font-size: 48px; }
 
   #social-icons
@@ -51,7 +51,7 @@ body
 
 @media (max-width: 919px)
 {
-  #title
+  header
   {
     width: 100vw;
     max-width: 100vw;
@@ -60,7 +60,7 @@ body
     height: 100px;
   }
 
-  #title h1
+  header h1
   {
     font-size: 40px;
     text-align: center;
@@ -69,16 +69,16 @@ body
     overflow: scroll;
   }
 
-  #title h1::-webkit-scrollbar
+  header h1::-webkit-scrollbar
   {
     height: 7px;
     width: 100%;
   }
 
-  #title h1::-webkit-scrollbar-track
+  header h1::-webkit-scrollbar-track
   { background: var(--dark-green-color); }
 
-  #title h1::-webkit-scrollbar-thumb
+  header h1::-webkit-scrollbar-thumb
   {
     background: var(--scroll-green-color);
     border-radius: 14px;
@@ -115,7 +115,7 @@ body
 
 @media (max-width: 665px)
 {
-  #title h4
+  header h4
   {
     display: inherit;
     font: 14px "Poppins", sans-serif;
